--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ openai==0.27.8
 openapi-schema-pydantic==1.2.4
 protobuf>=4.23.2,<5
 tokenizers==0.13.3
+langchain==0.0.198
+langchainplus-sdk==0.0.8
